# polarity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.native  build  emscripten_bugs.txt  index.html  test.commit  winbuild.cmd  winlink.cmd
assets/fonts/: droid_fonts_license.txt
assets/levels/: Level1.tmx  level1.tmx  level2.tmx  level3.tmx  level3a.tmx
audio/: audio.hpp  emscripten_audio_test.cpp  oscillator.html  oscillator.js  sdl_audio_test.cpp
graphics/: animation.cpp  animation.hpp  blit_description.hpp  canvas.cpp  canvas.hpp  color.cpp  color.hpp  display_list.hpp  font_manager.cpp  font_manager.hpp  font_renderer.cpp  font_renderer.hpp  graphics.hpp  image.cpp  image.hpp  init.cpp  init.hpp  layer_collection.cpp  layer_collection.hpp  matrix4x4.hpp  opengl_canvas.cpp  opengl_canvas.hpp  rect.hpp  sdl_canvas.cpp  sdl_canvas.hpp  sprite.cpp
libs/libtmxparser/src/: tmxparser.cpp  tmxparser.h
main/: game.cpp  game.hpp  loop.cpp  main.cpp  main.hpp
physics/: behavior.cpp  behavior.hpp  contact.cpp  contact.hpp  game_object.cpp  game_object.hpp  jumping_behavior.cpp  jumping_behavior.hpp  magnetic_behavior.hpp  physics.cpp  physics.hpp  physics.hpp~  player_behavior.cpp  player_behavior.hpp  vector.hpp
tools/: mapgen.cpp  mapgen.h
util/: async_io_task.cpp  async_io_task.hpp  lru_map.hpp  shared.hpp
world/: door_behavior.cpp  door_behavior.hpp  layer_collection.cpp  layer_collection.hpp  player.hpp  sounds.cpp  sounds.hpp  trigger.cpp  trigger.hpp  world.cpp  world.hpp
